final-fixed navbar-collapsed button

--- a/css/style.css
+++ b/css/style.css
@@ -18,45 +18,66 @@ p strong {
     border: 1px solid rgb(85, 34, 34);
 }
 
-.navbar-toggler span {
-    display: block;
-    background-color: #4f4f4f;
+/* remove border from toggler */
+.navbar-toggler {
+    border: 0 !important;
+}
+
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none !important;
+    box-shadow: none !important;
+    border: 0 !important;
+}
+
+/* lines of the Toggler */
+.toggler-icon{
+    width: 30px;
     height: 3px;
-    width: 25px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    position: relative;
-    left: 0;
-    opacity: 1;
-    transition: all 0.35s ease-out;
-    transform-origin: center left;
-    border: none;
+    background-color: #e74c3c;
+    display: block;
+    transition: all 0.2s;
 }
-    
-.navbar-toggler span:nth-child(1) {
-    transform: translate(0%, 0%) rotate(0deg);
+
+/* adds space between the lines */
+.middle-bar{
+    margin: 5px auto;
 }
-  
-.navbar-toggler span:nth-child(2) {
-    opacity: 1;
+
+/* state when navbar is opened (START) */
+.navbar-toggler .top-bar {
+    transform: rotate(45deg);
+    transform-origin: 10% 10%;
 }
-  
-.navbar-toggler span:nth-child(3) {
-    transform: translate(0%, 0%) rotate(0deg);
-}
-  
-.navbar-toggler span:nth-child(1) {
-    margin-top: 0.3em;
-}
-  
-.navbar-toggler:not(.collapsed) span:nth-child(1) {
-    transform: translate(15%, -33%) rotate(45deg);
-}
-  
-.navbar-toggler:not(.collapsed) span:nth-child(2) {
+
+.navbar-toggler .middle-bar {
     opacity: 0;
+    filter: alpha(opacity=0);
 }
-  
-.navbar-toggler:not(.collapsed) span:nth-child(3) {
-    transform: translate(15%, 33%) rotate(-45deg);
+
+.navbar-toggler .bottom-bar {
+    transform: rotate(-45deg);
+    transform-origin: 10% 90%;
+}
+/* state when navbar is opened (END) */
+
+/* state when navbar is collapsed (START) */
+.navbar-toggler.collapsed .top-bar {
+    transform: rotate(0);
+}
+
+.navbar-toggler.collapsed .middle-bar {
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+
+.navbar-toggler.collapsed .bottom-bar {
+    transform: rotate(0);
+}
+/* state when navbar is collapsed (END) */
+
+/* color of Toggler when collapsed */
+.navbar-toggler.collapsed .toggler-icon {
+    background: linear-gradient( 263deg, rgba(252,74,74,1) 0%, rgba(0,212,255,1) 100% );
 }
